[package]
name = "brainfuck"
version = "0.1.0"
description = "Brainfuck interpreter and transpiler into rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"

[profile.release]
lto = true
codegen-units = 1